--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -51,8 +51,8 @@ security:
             #    realm: "Secured Demo Area"
 
     access_control:
-        #- { path: /expediente/login.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/expediente/sysadmin.*, role: ROLE_SUPERADMIN }
+        - { path: /expediente/secured/login.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/expediente.*, role: ROLE_SUPERADMIN }
         
         #- { path: ^/expediente/sysadmin.*, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
         #- { path: ^/_internal, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
