--- a/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
@@ -1,7 +1,7 @@
    
 TecnotekExpedienteBundle_homepage:
     pattern:  /
-    defaults: { _controller: TecnotekExpedienteBundle:Default:index }
+    defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:index }
     
 _expediente_secured:
     resource: "@TecnotekExpedienteBundle/Controller/SecuredController.php"
@@ -13,331 +13,331 @@ _expediente_secured:
 #    prefix:   /expediente
 
 _change_admin_password:
-    pattern: /sysadmin/administrador/changePassword
+    pattern: /administrador/changePassword
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:changeUserPassword }
 
 #Super Administrador
 _expediente_sysadmin:
-    pattern:  /sysadmin
+    pattern:  /
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:index }
     
 _expediente_sysadmin_administrador:
-    pattern:  /sysadmin/administrador
+    pattern:  /administrador
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:administradorList }
 
 _delete_admin:
-    pattern:  /sysadmin/administrador/delete/{id}
+    pattern:  /administrador/delete/{id}
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:administradorDelete }
 
 _expediente_sysadmin_admin_create:
-    pattern:  /sysadmin/administrador/create
+    pattern:  /administrador/create
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:administradorCreate }
 
 _expediente_sysadmin_admin_save:
-    pattern:  /sysadmin/administrador/save
+    pattern:  /administrador/save
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:administradorSave }
 
 _expediente_sysadmin_admin_update:
-    pattern:  /sysadmin/administrador/update
+    pattern:  /administrador/update
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:administradorUpdate }
 
 _expediente_sysadmin_admin_show:
-    pattern:  /sysadmin/administrador/show/{id}
+    pattern:  /administrador/show/{id}
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:administradorShow }
 
 _expediente_sysadmin_admin_show_simple:
-    pattern:  /sysadmin/administrador/show
+    pattern:  /administrador/show
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:administradorShow }
 
 #CRUD de Coordinadores para SysAdmin
 _expediente_sysadmin_coordinador:
-    pattern:  /sysadmin/coordinador
+    pattern:  /coordinador
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:coordinadorList }
 
 _delete_coordinador:
-    pattern:  /sysadmin/coordinador/delete/{id}
+    pattern:  /coordinador/delete/{id}
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:coordinadorDelete }
 
 _expediente_sysadmin_coordinador_create:
-    pattern:  /sysadmin/coordinador/create
+    pattern:  /coordinador/create
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:coordinadorCreate }
 
 _expediente_sysadmin_coordinador_save:
-    pattern:  /sysadmin/coordinador/save
+    pattern:  /coordinador/save
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:coordinadorSave }
 
 _expediente_sysadmin_coordinador_update:
-    pattern:  /sysadmin/coordinador/update
+    pattern:  /coordinador/update
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:coordinadorUpdate }
 
 _expediente_sysadmin_coordinador_show:
-    pattern:  /sysadmin/coordinador/show/{id}
+    pattern:  /coordinador/show/{id}
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:coordinadorShow }
 
 _expediente_sysadmin_coordinador_show_simple:
-    pattern:  /sysadmin/coordinador/show
+    pattern:  /coordinador/show
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:coordinadorShow }
 #Fin de CRUD de Coordinadores para SysAdmin
 
 #CRUD de Profesores para SysAdmin
 _expediente_sysadmin_profesor:
-    pattern:  /sysadmin/profesor
+    pattern:  /profesor
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:profesorList }
 
 _delete_profesor:
-    pattern:  /sysadmin/profesor/delete/{id}
+    pattern:  /profesor/delete/{id}
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:profesorDelete }
 
 _expediente_sysadmin_profesor_create:
-    pattern:  /sysadmin/profesor/create
+    pattern:  /profesor/create
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:profesorCreate }
 
 _expediente_sysadmin_profesor_save:
-    pattern:  /sysadmin/profesor/save
+    pattern:  /profesor/save
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:profesorSave }
 
 _expediente_sysadmin_profesor_update:
-    pattern:  /sysadmin/profesor/update
+    pattern:  /profesor/update
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:profesorUpdate }
 
 _expediente_sysadmin_profesor_show:
-    pattern:  /sysadmin/profesor/show/{id}
+    pattern:  /profesor/show/{id}
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:profesorShow }
 
 _expediente_sysadmin_profesor_show_simple:
-    pattern:  /sysadmin/profesor/show
+    pattern:  /profesor/show
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:profesorShow }
 #Fin de CRUD de Coordinadores para Profesor
 
 #CRUD de routes para SysAdmin
 _expediente_sysadmin_route:
-    pattern:  /sysadmin/route
+    pattern:  /route
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:routeList }
 
 _delete_route:
-    pattern:  /sysadmin/route/delete/{id}
+    pattern:  /route/delete/{id}
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:routeDelete }
 
 _expediente_sysadmin_route_create:
-    pattern:  /sysadmin/route/create
+    pattern:  /route/create
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:routeCreate }
 
 _expediente_sysadmin_route_save:
-    pattern:  /sysadmin/route/save
+    pattern:  /route/save
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:routeSave }
 
 _expediente_sysadmin_route_update:
-    pattern:  /sysadmin/route/update
+    pattern:  /route/update
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:routeUpdate }
 
 _expediente_sysadmin_route_show:
-    pattern:  /sysadmin/route/show/{id}
+    pattern:  /route/show/{id}
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:routeShow }
 
 _expediente_sysadmin_route_edit:
-    pattern:  /sysadmin/route/edit/{id}
+    pattern:  /route/edit/{id}
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:routeEdit }
 
 _expediente_sysadmin_route_show_simple:
-    pattern:  /sysadmin/route/show
+    pattern:  /route/show
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:routeShow }
 
 _expediente_sysadmin_route_edit_simple:
-    pattern:  /sysadmin/route/edit
+    pattern:  /route/edit
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:routeEdit }
 #Fin de CRUD de routes
 
 #CRUD de bus para SysAdmin
 _expediente_sysadmin_bus:
-    pattern:  /sysadmin/bus
+    pattern:  /bus
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:busList }
 
 _delete_bus:
-    pattern:  /sysadmin/bus/delete/{id}
+    pattern:  /bus/delete/{id}
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:busDelete }
 
 _expediente_sysadmin_bus_create:
-    pattern:  /sysadmin/bus/create
+    pattern:  /bus/create
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:busCreate }
 
 _expediente_sysadmin_bus_save:
-    pattern:  /sysadmin/bus/save
+    pattern:  /bus/save
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:busSave }
 
 _expediente_sysadmin_bus_update:
-    pattern:  /sysadmin/bus/update
+    pattern:  /bus/update
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:busUpdate }
 
 _expediente_sysadmin_bus_show:
-    pattern:  /sysadmin/bus/show/{id}
+    pattern:  /bus/show/{id}
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:busShow }
 
 _expediente_sysadmin_bus_edit:
-    pattern:  /sysadmin/bus/edit/{id}
+    pattern:  /bus/edit/{id}
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:busEdit }
 
 _expediente_sysadmin_bus_show_simple:
-    pattern:  /sysadmin/bus/show
+    pattern:  /bus/show
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:busShow }
 
 _expediente_sysadmin_bus_edit_simple:
-    pattern:  /sysadmin/bus/edit
+    pattern:  /bus/edit
     defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:editShow }
 #Fin de CRUD de bus
 
 #CRUD de Students para SysAdmin
 _expediente_sysadmin_student:
-    pattern:  /sysadmin/student
+    pattern:  /student
     defaults: { _controller: TecnotekExpedienteBundle:Student:studentList }
 
 _delete_student:
-    pattern:  /sysadmin/student/delete/{id}
+    pattern:  /student/delete/{id}
     defaults: { _controller: TecnotekExpedienteBundle:Student:studentDelete }
 
 _expediente_sysadmin_student_create:
-    pattern:  /sysadmin/student/create
+    pattern:  /student/create
     defaults: { _controller: TecnotekExpedienteBundle:Student:studentCreate }
 
 _expediente_sysadmin_student_save:
-    pattern:  /sysadmin/student/save
+    pattern:  /student/save
     defaults: { _controller: TecnotekExpedienteBundle:Student:studentSave }
 
 _expediente_sysadmin_student_update:
-    pattern:  /sysadmin/student/update
+    pattern:  /student/update
     defaults: { _controller: TecnotekExpedienteBundle:Student:studentUpdate }
 
 _expediente_sysadmin_student_show:
-    pattern:  /sysadmin/student/show/{id}
+    pattern:  /student/show/{id}
     defaults: { _controller: TecnotekExpedienteBundle:Student:studentShow }
 
 _expediente_sysadmin_student_edit:
-    pattern:  /sysadmin/student/edit/{id}
+    pattern:  /student/edit/{id}
     defaults: { _controller: TecnotekExpedienteBundle:Student:studentEdit }
 
 _expediente_sysadmin_student_show_simple:
-    pattern:  /sysadmin/student/show
+    pattern:  /student/show
     defaults: { _controller: TecnotekExpedienteBundle:Student:studentShow }
 
 _expediente_sysadmin_student_edit_simple:
-    pattern:  /sysadmin/student/edit
+    pattern:  /student/edit
     defaults: { _controller: TecnotekExpedienteBundle:Student:studentEdit }
 #Fin de CRUD de Students
 
 #CRUD de Clubs para SysAdmin
 _expediente_sysadmin_club:
-    pattern:  /sysadmin/club
+    pattern:  /club
     defaults: { _controller: TecnotekExpedienteBundle:Student:clubList }
 
 _delete_club:
-    pattern:  /sysadmin/club/delete/{id}
+    pattern:  /club/delete/{id}
     defaults: { _controller: TecnotekExpedienteBundle:Student:clubDelete }
 
 _expediente_sysadmin_club_create:
-    pattern:  /sysadmin/club/create
+    pattern:  /club/create
     defaults: { _controller: TecnotekExpedienteBundle:Student:clubCreate }
 
 _expediente_sysadmin_club_save:
-    pattern:  /sysadmin/club/save
+    pattern:  /club/save
     defaults: { _controller: TecnotekExpedienteBundle:Student:clubSave }
 
 _expediente_sysadmin_club_update:
-    pattern:  /sysadmin/club/update
+    pattern:  /club/update
     defaults: { _controller: TecnotekExpedienteBundle:Student:clubUpdate }
 
 _expediente_sysadmin_club_show:
-    pattern:  /sysadmin/club/show/{id}
+    pattern:  /club/show/{id}
     defaults: { _controller: TecnotekExpedienteBundle:Student:clubShow }
 
 _expediente_sysadmin_club_edit:
-    pattern:  /sysadmin/club/edit/{id}
+    pattern:  /club/edit/{id}
     defaults: { _controller: TecnotekExpedienteBundle:Student:clubEdit }
 
 _expediente_sysadmin_club_show_simple:
-    pattern:  /sysadmin/club/show
+    pattern:  /club/show
     defaults: { _controller: TecnotekExpedienteBundle:Student:clubShow }
 
 _expediente_sysadmin_club_edit_simple:
-    pattern:  /sysadmin/club/edit
+    pattern:  /club/edit
     defaults: { _controller: TecnotekExpedienteBundle:Student:clubEdit }
 #Fin de CRUD de Clubs
 
 #CRUD de Tickets para SysAdmin
 _expediente_sysadmin_ticket:
-    pattern:  /sysadmin/ticket
+    pattern:  /ticket
     defaults: { _controller: TecnotekExpedienteBundle:Student:ticketIndex }
 
 _expediente_sysadmin_ticket_save:
-    pattern:  /sysadmin/ticket/save
+    pattern:  /ticket/save
     defaults: { _controller: TecnotekExpedienteBundle:Student:ticketSave }
 
 
 ##################
 _expediente_sysadmin_ticket_list:
-    pattern:  /sysadmin/ticket/list
+    pattern:  /ticket/list
     defaults: { _controller: TecnotekExpedienteBundle:Student:ticketList }
 
 _delete_ticket:
-    pattern:  /sysadmin/ticket/delete/{id}
+    pattern:  /ticket/delete/{id}
     defaults: { _controller: TecnotekExpedienteBundle:Student:ticketDelete }
 
 _expediente_sysadmin_ticket_create:
-    pattern:  /sysadmin/ticket/create
+    pattern:  /ticket/create
     defaults: { _controller: TecnotekExpedienteBundle:Student:ticketCreate }
 
 
 
 _expediente_sysadmin_ticket_update:
-    pattern:  /sysadmin/ticket/update
+    pattern:  /ticket/update
     defaults: { _controller: TecnotekExpedienteBundle:Student:ticketUpdate }
 
 _expediente_sysadmin_ticket_show:
-    pattern:  /sysadmin/ticket/show/{id}
+    pattern:  /ticket/show/{id}
     defaults: { _controller: TecnotekExpedienteBundle:Student:ticketShow }
 
 _expediente_sysadmin_ticket_edit:
-    pattern:  /sysadmin/ticket/edit/{id}
+    pattern:  /ticket/edit/{id}
     defaults: { _controller: TecnotekExpedienteBundle:Student:ticketEdit }
 
 _expediente_sysadmin_ticket_show_simple:
-    pattern:  /sysadmin/ticket/show
+    pattern:  /ticket/show
     defaults: { _controller: TecnotekExpedienteBundle:Student:ticketShow }
 
 _expediente_sysadmin_ticket_edit_simple:
-    pattern:  /sysadmin/ticket/edit
+    pattern:  /ticket/edit
     defaults: { _controller: TecnotekExpedienteBundle:Student:ticketEdit }
 
 _expediente_sysadmin_student_ajax_list:
-    pattern:  /sysadmin/student/ajaxList
+    pattern:  /student/ajaxList
     defaults: { _controller: TecnotekExpedienteBundle:Student:getStudentList }
 
 _expediente_sysadmin_relatives_list:
-    pattern:  /sysadmin/student/relativesList
+    pattern:  /student/relativesList
     defaults: { _controller: TecnotekExpedienteBundle:Student:getRelativesList }
 #Fin de CRUD de Tickets
 
 #Obtener lista de estudiantes
 _expediente_get_students_list:
-    pattern:  /sysadmin/students/list
+    pattern:  /students/list
     defaults: { _controller: TecnotekExpedienteBundle:Student:getList }
 
 _expediente_associate_student:
-    pattern:  /sysadmin/students/associateToClub
+    pattern:  /students/associateToClub
     defaults: { _controller: TecnotekExpedienteBundle:Student:associateStudentToClub }
 
 _expediente_remove_student_from_club:
-    pattern:  /sysadmin/students/removeStudentFromClub
+    pattern:  /students/removeStudentFromClub
     defaults: { _controller: TecnotekExpedienteBundle:Student:removeStudentFromClub }
 
 _expediente_save_new_contact:
-    pattern:  /sysadmin/students/newContact
+    pattern:  /students/newContact
     defaults: { _controller: TecnotekExpedienteBundle:Student:createContact }
 
 _expediente_remove_relative:
-    pattern:  /sysadmin/students/removeRelative
+    pattern:  /students/removeRelative
     defaults: { _controller: TecnotekExpedienteBundle:Student:removeRelative}
 
 _expediente_get_contacts_list:
-    pattern:  /sysadmin/students/contact/list
+    pattern:  /students/contact/list
     defaults: { _controller: TecnotekExpedienteBundle:Student:getContactList }
 
 #Administrador
@@ -355,6 +355,10 @@ _expediente_report_bus:
     pattern:  /reports/bus/
     defaults: { _controller: TecnotekExpedienteBundle:Report:reportBus }
 
+_expediente_report_routes:
+    pattern:  /reports/routes/
+    defaults: { _controller: TecnotekExpedienteBundle:Report:reportRoute }
+
 _expediente_report_bus_search:
     pattern:  /reports/bus/search/
     defaults: { _controller: TecnotekExpedienteBundle:Report:searchBus }
@@ -363,4 +367,14 @@ _expediente_report_zones:
     pattern:  /reports/zones/
     defaults: { _controller: TecnotekExpedienteBundle:Report:reportZones }
 
+_expediente_report_students_by_route:
+    pattern:  /reports/studentsByRoute/
+    defaults: { _controller: TecnotekExpedienteBundle:Report:reportStudentByRoute }
+
+#########################################
+
+###########      REPORTS      ###########
+_expediente_absences:
+    pattern:  /absences/
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absencesIndex }
 #########################################
