--- a/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
@@ -508,6 +508,34 @@ _expediente_absences_search:
 _expediente_absences_save:
     pattern:  /absences/save
     defaults: { _controller: TecnotekExpedienteBundle:Student:absenceSave }
+
+_delete_absence:
+    pattern:  /absence/delete/{id}
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absenceDelete }
+
+_expediente_sysadmin_absence_create:
+    pattern:  /absence/create
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absenceCreate }
+
+_expediente_sysadmin_absence_update:
+    pattern:  /absence/update
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absenceUpdate }
+
+_expediente_sysadmin_absence_show:
+    pattern:  /absence/show/{id}
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absenceShow }
+
+_expediente_sysadmin_absence_edit:
+    pattern:  /absence/edit/{id}
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absenceEdit }
+
+_expediente_sysadmin_absence_show_simple:
+    pattern:  /absence/show
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absenceShow }
+
+_expediente_sysadmin_absence_edit_simple:
+    pattern:  /absence/edit
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absenceEdit }
 #########################################
 
 _expediente_sysadmin_period_admin_simple:
