--- a/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
@@ -509,6 +509,47 @@ _expediente_report_daily_by_route:
 
 #########################################
 
+###########      PENALTIES      ###########
+_expediente_penalties:
+    pattern:  /ap/penalties/
+    defaults: { _controller: TecnotekExpedienteBundle:Student:penaltiesIndex }
+
+_expediente_absences_search:
+    pattern:  /absences/search/
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absencesSearch }
+
+_expediente_absences_save:
+    pattern:  /absences/save
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absenceSave }
+
+_delete_absence:
+    pattern:  /absence/delete/{id}
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absenceDelete }
+
+_expediente_sysadmin_absence_create:
+    pattern:  /absence/create
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absenceCreate }
+
+_expediente_sysadmin_absence_update:
+    pattern:  /absence/update
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absenceUpdate }
+
+_expediente_sysadmin_absence_show:
+    pattern:  /absence/show/{id}
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absenceShow }
+
+_expediente_sysadmin_absence_edit:
+    pattern:  /absence/edit/{id}
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absenceEdit }
+
+_expediente_sysadmin_absence_show_simple:
+    pattern:  /absence/show
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absenceShow }
+
+_expediente_sysadmin_absence_edit_simple:
+    pattern:  /absence/edit
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absenceEdit }
+
 ###########      REPORTS      ###########
 _expediente_absences:
     pattern:  /absences/
