--- a/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
@@ -567,6 +567,10 @@ _delete_absence:
     pattern:  /absence/delete/{id}
     defaults: { _controller: TecnotekExpedienteBundle:Student:absenceDelete }
 
+_delete_absence_simple:
+    pattern:  /absence/delete
+    defaults: { _controller: TecnotekExpedienteBundle:Student:absenceDelete }
+
 _expediente_sysadmin_absence_create:
     pattern:  /absence/create
     defaults: { _controller: TecnotekExpedienteBundle:Student:absenceCreate }
@@ -594,6 +598,14 @@ _expediente_sysadmin_absence_edit_simple:
 _expediente_sysadmin_absence_enter_by_group:
     pattern:  /absence/enterByGroup
     defaults: { _controller: TecnotekExpedienteBundle:Student:enterAbsenceByGroup }
+
+_expediente_sysadmin_load_groups_of_period:
+  pattern: /absence/loadGroupsOfPeriod/
+  defaults: { _controller: TecnotekExpedienteBundle:Student:loadGroupsOfPeriod }
+
+_expediente_sysadmin_save_group_absences:
+  pattern: /absence/saveGroupAbsences/
+  defaults: { _controller: TecnotekExpedienteBundle:Student:saveGroupAbsences }
 #########################################
 
 _expediente_sysadmin_period_admin_simple:
